fixed overflowing number badges

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ body {
   padding:3px 7px;
   color:white;
   font-size:0.8rem;
+  height: 50%;
 }
 
 .name {
